# api/model/product.model.js
@@ -2,12 +2,14 @@ const mongoose = require('mongoose');
 
 const {Schema} = mongoose;
 
+const contain_article = new Schema({
+  art_id: String,
+  amount_of: Number
+}, {_id: false});
+
 const product = new Schema({
   name: {type: String, unique: true},
-  contain_articles: [{
-    art_id: String,
-    amount_of: Number
-  }]
+  contain_articles: [contain_article]
 });
 
 module.exports = mongoose.model("Product", product);
